force-app/main/default/objects/VG_Governance_Compliance__c/VG_Governance_Compliance__c.object-meta.xml
<CustomObject>
    <label>Governance &amp; Compliance</label>
    <nameField>
        <label>Governance &amp; Compliance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Governance &amp; Compliances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>