force-app/main/default/objects/VG_Governance_Compliance__c/fields/Referred_to__c.field-meta.xml
<CustomField>
    <fullName>Referred_to__c</fullName>
    <label>Referred to</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>