force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Additional_information_attached__c.field-meta.xml
<CustomField>
    <fullName>VG_Additional_information_attached__c</fullName>
    <label>Additional information attached</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>