force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Conditions_Subjectivites__c.field-meta.xml
<CustomField>
    <fullName>VG_Conditions_Subjectivites__c</fullName>
    <label>Conditions/Subjectivites</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>