force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Contact_Certainty_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Contact_Certainty_Date__c</fullName>
    <label>Contact Certainty Date</label>
    <type>Date</type>
</CustomField>