force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Contract_Certainty__c.field-meta.xml
<CustomField>
    <fullName>VG_Contract_Certainty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Certainty</label>
    <type>Checkbox</type>
</CustomField>