force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Contract_Certainty_Comments__c.field-meta.xml
<CustomField>
    <fullName>VG_Contract_Certainty_Comments__c</fullName>
    <label>Contract Certainty Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>