force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Deadline__c.field-meta.xml
<CustomField>
    <fullName>VG_Deadline__c</fullName>
    <description>Deadline outlines time given for referral</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>