force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Documents_attached__c.field-meta.xml
<CustomField>
    <fullName>VG_Documents_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documents attached?</label>
    <type>Checkbox</type>
</CustomField>