force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Key_Clauses_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>VG_Key_Clauses_Exclusions__c</fullName>
    <label>Key Clauses/ Exclusions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>