force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Loss_History__c.field-meta.xml
<CustomField>
    <fullName>VG_Loss_History__c</fullName>
    <label>Loss History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>