force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Peer_Review_1_Complete__c.field-meta.xml
<CustomField>
    <fullName>VG_Peer_Review_1_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peer Review 1 Complete</label>
    <type>Checkbox</type>
</CustomField>