force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Peer_Review_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>VG_Peer_Review_2_Comments__c</fullName>
    <label>Peer Review 2 Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>