force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Peer_Review_2_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Peer_Review_2_Date__c</fullName>
    <label>Peer Review 2 Date</label>
    <type>Date</type>
</CustomField>