force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Peer_Reviewer_1__c.field-meta.xml
<CustomField>
    <fullName>VG_Peer_Reviewer_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Governance_Compliances</relationshipName>
    <type>Lookup</type>
</CustomField>