force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Peer_Reviewer_2__c.field-meta.xml
<CustomField>
    <fullName>VG_Peer_Reviewer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Peer Reviewer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Governance_Compliances1</relationshipName>
    <type>Lookup</type>
</CustomField>