force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Policy_Issuance_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Issuance_Date__c</fullName>
    <label>Policy Issuance Date</label>
    <type>DateTime</type>
</CustomField>