force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Pricing_Rationale__c.field-meta.xml
<CustomField>
    <fullName>VG_Pricing_Rationale__c</fullName>
    <label>Pricing Rationale</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>