force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Proposed_Terms__c.field-meta.xml
<CustomField>
    <fullName>VG_Proposed_Terms__c</fullName>
    <label>Proposed Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>