force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Question_10__c.field-meta.xml
<CustomField>
    <fullName>VG_Question_10__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Are currencies clearly identified?</description>
    <inlineHelpText>Are currencies clearly identified?</inlineHelpText>
    <label>Contract Certainty Question</label>
    <type>Checkbox</type>
</CustomField>