force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Question_11__c.field-meta.xml
<CustomField>
    <fullName>VG_Question_11__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Full Terms and Conditions?</description>
    <inlineHelpText>Full Terms and Conditions?</inlineHelpText>
    <label>Contract Certainty Question</label>
    <type>Checkbox</type>
</CustomField>