force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Rating_Considerations__c.field-meta.xml
<CustomField>
    <fullName>VG_Rating_Considerations__c</fullName>
    <label>Rating Considerations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>