force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>VG_Reason_for_Referral__c</fullName>
    <label>Reason for Referral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Line Size</fullName>
            </value>
            <value>
                <fullName>Structure</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Risk Quality</fullName>
            </value>
            <value>
                <fullName>Loss Experience</fullName>
            </value>
            <value>
                <fullName>Commercial Consideration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>