force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referral__c.field-meta.xml
<CustomField>
    <fullName>VG_Referral__c</fullName>
    <label>Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>