force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referral_Complete__c.field-meta.xml
<CustomField>
    <fullName>VG_Referral_Complete__c</fullName>
    <label>Referral Complete</label>
    <type>Date</type>
</CustomField>