force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referral_completed_By__c.field-meta.xml
<CustomField>
    <fullName>VG_Referral_completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Governance_Compliances3</relationshipName>
    <type>Lookup</type>
</CustomField>