force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referral_Underwirter_Comments__c.field-meta.xml
<CustomField>
    <fullName>VG_Referral_Underwirter_Comments__c</fullName>
    <label>Referral Underwirter Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>