force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referred_to__c.field-meta.xml
<CustomField>
    <fullName>VG_Referred_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referred to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Governance_Compliances2</relationshipName>
    <type>Lookup</type>
</CustomField>