force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Referred_to_London__c.field-meta.xml
<CustomField>
    <fullName>VG_Referred_to_London__c</fullName>
    <label>Referred to London</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>