force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Selected_PS__c.field-meta.xml
<CustomField>
    <fullName>VG_Selected_PS__c</fullName>
    <label>Selected PS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>