force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_Slip_Reference_No__c.field-meta.xml
<CustomField>
    <fullName>VG_Slip_Reference_No__c</fullName>
    <label>Slip Reference No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>