force-app/main/default/objects/VG_Governance_Compliance__c/fields/VG_UW_Consideration__c.field-meta.xml
<CustomField>
    <fullName>VG_UW_Consideration__c</fullName>
    <label>UW Consideration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>